--- a/_posts/2018-04-24-dp.md
+++ b/_posts/2018-04-24-dp.md
@@ -26,8 +26,8 @@ Dette er en oppgave som kombinerer teori og praksis. Du bør være glad i eksper
 
 Se også tidligere medieomtale på:
 - <a href="https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790">https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790</a>
-- https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/
-- http://trondheimhavn.no/nyhet/norsk-skipsteknologi-pa-tysk-tv-1248.aspx
+- <a href="https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/">https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/</a>
+- <a href="http://trondheimhavn.no/nyhet/norsk-skipsteknologi-pa-tysk-tv-1248.aspx">http://trondheimhavn.no/nyhet/norsk-skipsteknologi-pa-tysk-tv-1248.aspx</a>
 
 
 Hovedveileder: [Morten Breivik](https://www.ntnu.no/ansatte/morten.breivik)
