added media links

--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -48,8 +48,9 @@ Required backgroud knowledge
 
 Useful but not required background knowledge
 
-- Additional courses in statistics, sensor systems and/or machine learning.
+- Additional courses in statistics, estimation, sensor systems and/or machine learning.
 - Knowledge of ROS
+- You should feel comfortable working with theory, and with uncertainty.
 
 This is a project of utmost importance for the safety of the autonomous ferry, with a strong potential for contributing to defining the research front in sensor fusion.
 
@@ -61,4 +62,10 @@ For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu
 * Granström, K., Reuter, S., Meissner, D. & Scheel, A. (2014): “[A multiple model PHD approach to tracking of cars under an assumed rectangular shape](https://ieeexplore.ieee.org/document/6915991/)”, FUSION 2014.
 * Granström, K., Baum, M. & Reuter, S. (2016): “[Extended Object Tracking: Introduction, Overview and Applications](https://arxiv.org/abs/1604.00970)”, Journal of Advances in Information Fusion.
 * Schuster, M. & Reuter, J. (2015): “[Target tracking in marine environment using automotive radar and laser range sensor](https://ieeexplore.ieee.org/document/7284009/)”, MMAR 2015.
+
+See also some of the media coverage that the autonomous ferry project has received:
+
+- <a href="https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790">https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790</a>
+- <a href="https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/">https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/</a>
+- <a href="http://trondheimhavn.no/nyhet/norsk-skipsteknologi-pa-tysk-tv-1248.aspx">http://trondheimhavn.no/nyhet/norsk-skipsteknologi-pa-tysk-tv-1248.aspx</a>
 
