--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -56,3 +56,9 @@ Co-supervisor: [Inger B. Hagen](https://www.ntnu.no/ansatte/inger.b.hagen), PhD 
 * Johansen et al. (2016): “[Ship Collision Avoidance and COLREGS Compliance Using Simulation-Based Control Behavior Selection With Predictive Hazard Assessment](https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=)”, IEEE Transactions on Intelligent Transportation Systems.
 
 ![Ferry launch]({{site.url}}/assets/fergelaunch_small.png ){:width="500px"}
+
+See also some of the media coverage that the project has received:
+
+- <a href="https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790">https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790</a>
+- <a href="https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/">https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/</a>
+- <a href="http://trondheimhavn.no/nyhet/norsk-skipsteknologi-pa-tysk-tv-1248.aspx">http://trondheimhavn.no/nyhet/norsk-skipsteknologi-pa-tysk-tv-1248.aspx</a>
