--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -38,6 +38,7 @@ For the MSc project several directions are possible.
 - More extensive data gathering, using the lidar mounted on the autonomous ferry prototype.
 - In-depth studies of multi-target and/or multi-scan EOT, and track initialization of EOT.
 - Applications of EOT in radar tracking or sensor fusion.
+- EOT is actually related to the much more well-studied problem of simultaneous localization and mapping (SLAM). An amibitous but very interesting project could be to bring tools from state of the art SLAM methods into the field of EOT (e.g., factor graphs).
 
 ## Prerequisites
 
@@ -50,6 +51,7 @@ Useful but not required background knowledge
 
 - Additional courses in statistics, estimation, sensor systems and/or machine learning.
 - Knowledge of ROS
+- Knowledge of SLAM.
 - You should feel comfortable working with theory, and with uncertainty.
 
 This is a project of utmost importance for the safety of the autonomous ferry, with a strong potential for contributing to defining the research front in sensor fusion.
