--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -3,6 +3,8 @@ layout: post
 title: Extended object tracking
 category: SF
 ---
+![Brattøra]({{site.url}}/assets/brattora.jpg)
+
 ## Background
 Target tracking concerns estimating the movement of one or more objects based on measurements of the objects. Most commonly, the measurements of an object is assumed to be a single point in range and bearing, or in cartesian coordinates. However, when sensors with high resolution is used, this assumption becomes questionable, as the extent of observed objects also can be seen.
 
