--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -29,7 +29,7 @@ Tasks for the autumn project:
 
 1. Conduct a literature study on relevant methods for multi-target tracking and extended object tracking.
 2. Describe similarities and differences between conventional multi-target tracking and extended object tracking in the report.
-3. Propose a solution to the data association problem in single-target lidar tracking of sizeable objects.
+3. Propose a solution to the data association problem in single-target lidar tracking of sizeable objects. <a href="https://ieeexplore.ieee.org/document/7284009/">Schuster & Reuter</a> can serve as a starting point.
 4. Propose a solution to the filtering problem in single-target lidar tracking of sizeable objects.
 5. Test the methods in simulations and on real data.
 6. Discuss the findings in a report.
