--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -6,16 +6,19 @@ category: SF
 ![Brattøra]({{site.url}}/assets/brattora.jpg)
 
 ## Background
-Target tracking concerns estimating the movement of one or more objects based on measurements of the objects. Most commonly, the measurements of an object is assumed to be a single point in range and bearing, or in cartesian coordinates. However, when sensors with high resolution is used, this assumption becomes questionable, as the extent of observed objects also can be seen.
 
-Estimating the extent jointly with the kinematic state is known as extended object tracking (EOT). This is a fairly recent field which entails several challenges. Research on EOT needs to answer several important and difficult questions:
+During 2017 the prototype of an autonomous ferry has been built and launched by researchers at NTNU. The 6 meter long prototype is a precursor of a twice as large ferry intended for passenger transport over the canal between Ravnkloa and Brattøra. The ferry will use a variety of sensors to perceive its surroundings and avoid collisions with other vessels. The primary sensor for this task will be a Velodyne lidar.
+
+Target tracking is a central component of the ferry's sensor system. Based on the raw sensor data, software must detect other objects, and estimate their locations and velocities. Many different tracking methods exist, and which method is most appropriate depends on the sensors used. The primary sensor for collision avoidance will be an automotive lidar, while cameras and radars also will be considered. Lidar and radar are both active sensors, which can measure both range and bearing. A key difference between radar and lidar is that the lidar has much higher resolution.
+
+Traditional tracking methods have largely been motivated by military radar applications. A key assumption of these methods is that an object yields maximally one detection in each sensor scan. For lidar, this assumption is rather dubious. The lidar returns a point clould, where several points will come from a given object such as a ship. Furthermore, the ferry will operate in a confined environment, where it will have to maneuver very close to other vessels. It is therefore important to estimate the extents of other vessels, in addition to their kinematic states. This is known as Extended Object Tracking (EOT).
+
+This is a fairly recent and exciting research field. Research on EOT needs to answer several important and difficult questions:
 
 - How should target extent be parameterized?
 - How does one figure out which measurements comes from the object, and which measurements are noise? (This is known as data association).
 - How does one deal with situations where only parts of the object is visible?
 - How should maneuvers of an extended object be modeled?
-
-EOT is of particular relevance to the autonomous ferry application. Short-range high-resolution sensors (e.g., lidar) will be used for collision avoidance. Since the Canal is relatively narrow the ferry will inevitably have to navigate very close other vessels, and having a good estimate of their extents is therefore very important.
 
 This autumn project will build upon a previous autumn project and master thesis to develop a reliable EOT method for the autonomous ferry. The focus will be on tracking of boats of a certain size such as the Munkholmen ferry.
 
@@ -39,8 +42,8 @@ For the MSc project several directions are possible.
 - Application of the methods in collision avoidance systems.
 - More extensive data gathering, using the lidar mounted on the autonomous ferry prototype.
 - In-depth studies of multi-target and/or multi-scan EOT, and track initialization of EOT.
-- Applications of EOT in radar tracking or sensor fusion.
-- EOT is actually related to the much more well-studied problem of simultaneous localization and mapping (SLAM). An amibitous but very interesting project could be to bring tools from state of the art SLAM methods into the field of EOT (e.g., factor graphs).
+- Applications of EOT in radar tracking or fusion between different sensors.
+- EOT is actually related to the much more well-studied problem of simultaneous localization and mapping (SLAM). The object in EOT can be viewed as a map which the observer moves relative to. An amibitous but very interesting project could be to bring tools from state of the art SLAM methods into the field of EOT (e.g., factor graphs).
 
 ## Prerequisites
 
@@ -52,11 +55,11 @@ Required backgroud knowledge
 Useful but not required background knowledge
 
 - Additional courses in statistics, estimation, sensor systems and/or machine learning.
-- Knowledge of ROS
+- Knowledge of ROS.
 - Knowledge of SLAM.
 - You should feel comfortable working with theory, and with uncertainty.
 
-This is a project of utmost importance for the safety of the autonomous ferry, with a strong potential for contributing to defining the research front in sensor fusion.
+This is a project of utmost importance for the safety of the autonomous ferry. The project is in the research front of sensor fusion, with many possibilities for publicity, both academically and in popular media.
 
 ## Contact 
 For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo).
