--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -24,7 +24,7 @@ This autumn project will build upon a previous autumn project and master thesis 
 
 | <img src="{{site.url}}/assets/munkholmdeparting.png" width="370"> | | <img src="{{site.url}}/assets/extent_ais_pos.png" width="370"> |
 |:---:| :---: |:---:|
-| The ferry towards Munkholmen as seen by the lidar (different colors are data from different time steps). | | Example of varying target extent in radar data. This information can be used to aid data association.|
+| The Munkholmen tourist ferry as seen by a lidar (different colors are data from different time steps). | | Example of varying target extent in radar data. This information can be used to aid data association.|
 
 ## Proposed Tasks
 
