--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -22,9 +22,9 @@ This is a fairly recent and exciting research field. Research on EOT needs to an
 
 This autumn project will build upon a previous autumn project and master thesis to develop a reliable EOT method for the autonomous ferry. The focus will be on tracking of boats of a certain size such as the Munkholmen ferry.
 
-| <img src="{{site.url}}/assets/munkholmdeparting.png" width="370"> | | <img src="{{site.url}}/assets/extent_ais_pos.png" width="370"> |
+| <img src="{{site.url}}/assets/munkholmdeparting.png" width="370"> | | <img src="{{site.url}}/assets/lidar-and-camera.jpg" width="370"> |
 |:---:| :---: |:---:|
-| The Munkholmen tourist ferry as seen by a lidar (different colors are data from different time steps). | | Example of varying target extent in radar data. This information can be used to aid data association.|
+| The Munkholmen tourist ferry as seen by a lidar (different colors are data from different time steps). | | The experimental setup where the lidar were recorded.|
 
 ## Proposed Tasks
 
