--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -24,7 +24,7 @@ This autumn project will build upon a previous autumn project and master thesis 
 
 | <img src="{{site.url}}/assets/munkholmdeparting.png" width="370"> | | <img src="{{site.url}}/assets/lidar-and-camera.jpg" width="370"> |
 |:---:| :---: |:---:|
-| The Munkholmen tourist ferry as seen by a lidar (different colors are data from different time steps). | | The experimental setup where the lidar were recorded.|
+| The Munkholmen tourist ferry as seen by a lidar (different colors are data from different time steps). | | The experimental setup where the lidar were recorded. It is evident that the boats in the background will cover several degrees in the field of view.|
 
 ## Proposed Tasks
 
