--- a/_posts/2018-04-24-dp.md
+++ b/_posts/2018-04-24-dp.md
@@ -23,6 +23,8 @@ Oppgaven vil bestå av følgende deloppgaver:
 
 Dette er en oppgave som kombinerer teori og praksis. Du bør være glad i eksperimentelt arbeid og ha bakgrunn innen navigasjon og fartøystyring for å lykkes med denne oppgaven. Oppgaven vil også skape mye publisitet og det kan bli endel demonstrasjoner for aviser og TV underveis. Dette er en unik sjanse for deg som vil delta i en historisk teknologiutvikling av autonome ferger!
 
+Oppgaven vil forlenges til en masteroppgave i samarbeid med kandidaten. Flere oppgaver på fergen kan avtales med interesserte studenter som tar kontakt. 
+
 
 Se også tidligere medieomtale på:
 - <a href="https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790">https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790</a>
