--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -24,8 +24,6 @@ In (Johansen et al. 2014) a scenario-based MPC approach to collision avoidance i
 
 ![Collison avoidance test - head on scenario]({{site.url}}/assets/sbmpc_head_on_photo.pdf ){:width="500px"}
 
-
-
 ## Proposed tasks specialization project
 
 * Implement the scenario-based MPC approach, including geographical constraints.
@@ -42,7 +40,9 @@ The specialization project is supposed to be followed by a master's thesis build
 * Investigate the possibility of using automatic tuning methods for the cost function weights.
 * Optimize the algorithm with regard to its run-time.
 
-
+|<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700">|
+|:---:|
+|Giorgio Kufoalor during field trials in Netherlands when the SB-MPC method was tested by Maritime Robotics under direction of the Dutch navy. |
 
 ## Supervisors
 
@@ -57,7 +57,7 @@ Co-supervisor: [Inger B. Hagen](https://www.ntnu.no/ansatte/inger.b.hagen), PhD 
 
 ![Ferry launch]({{site.url}}/assets/fergelaunch_small.png ){:width="500px"}
 
-See also some of the media coverage that the project has received:
+See also some of the media coverage that the ferry project has received:
 
 - <a href="https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790">https://www.tu.no/artikler/verdens-forste-forerlose-passasjerferge-kan-ga-over-en-kanal-i-trondheim/363790</a>
 - <a href="https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/">https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/</a>
