--- a/_posts/2018-04-11-mpc.md
+++ b/_posts/2018-04-11-mpc.md
@@ -46,9 +46,9 @@ The specialization project is supposed to be followed by a master's thesis build
 
 ## Supervisors
 
-Main supervisor: [Edmund Brekke](http://www.ntnu.no/ansatte/edmundfo) or [Tor Arne Johansen](https://www.ntnu.edu/employees/tor.arne.johansen).
+Main supervisor: [Edmund Brekke](http://www.ntnu.no/ansatte/edmundfo).
 
-Co-supervisor: [Inger B. Hagen](https://www.ntnu.no/ansatte/inger.b.hagen), PhD Candidate, NTNU.
+Co-supervisor: [Inger B. Hagen](https://www.ntnu.no/ansatte/inger.b.hagen),  [Giorgio Kufoalor](https://www.ntnu.edu/employees/kufoalor) and [Tor Arne Johansen](https://www.ntnu.edu/employees/tor.arne.johansen).
 
 
 ## References
