eot updated nov 2018

--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -7,7 +7,7 @@ category: SF
 
 ## Background
 
-During 2017 the prototype of an autonomous ferry has been built and launched by researchers at NTNU. The 6 meter long prototype is a precursor of a twice as large ferry intended for passenger transport over the canal between Ravnkloa and Brattøra. The ferry will use a variety of sensors to perceive its surroundings and avoid collisions with other vessels. The primary sensor for this task will be a Velodyne lidar.
+During 2017 the prototype of the autonomous ferry Milliampere has been built and launched by researchers at NTNU. The 6 meter long prototype is a precursor of a twice as large ferry intended for passenger transport over the canal between Ravnkloa and Brattøra. The ferry will use a variety of sensors to perceive its surroundings and avoid collisions with other vessels. The primary sensor for this task will be a Velodyne lidar.
 
 Target tracking is a central component of the ferry's sensor system. Based on the raw sensor data, software must detect other objects, and estimate their locations and velocities. Many different tracking methods exist, and which method is most appropriate depends on the sensors used. The primary sensor for collision avoidance will be an automotive lidar, while cameras and radars also will be considered. Lidar and radar are both active sensors, which can measure both range and bearing. A key difference between radar and lidar is that the lidar has much higher resolution.
 
@@ -28,47 +28,32 @@ This autumn project will build upon a previous autumn project and master thesis 
 
 ## Proposed Tasks
 
-Tasks for the autumn project:
+Several variations of this MSc thesis is possible.
 
-1. Conduct a literature study on relevant methods for multi-target tracking and extended object tracking.
-2. Describe similarities and differences between conventional multi-target tracking and extended object tracking in the report.
-3. Propose a solution to the data association problem in single-target lidar tracking of sizeable objects. <a href="https://ieeexplore.ieee.org/document/7284009/">Schuster & Reuter</a> can serve as a starting point.
-4. Propose a solution to the filtering problem in single-target lidar tracking of sizeable objects.
-5. Test the methods in simulations and on real data.
-6. Discuss the findings in a report.
+* Investigate optimal algorithms for EOT in lidar data by means of direct measurement models and particle filtering.
+* Further development of the EOT algorithm developed by Ruud et al. (See reference below.)
+* Adaptation of existing PMBM-based EOT algorithms to maritime lidar data.
+* EOT is actually related to the much more well-studied problem of simultaneous localization and mapping (SLAM). The object in EOT can be viewed as a map which the observer moves relative to. An amibitous but very interesting project could be to bring tools from state of the art SLAM methods into the field of EOT (e.g., factor graphs).
 
-For the MSc project several directions are possible.
-
-- Application of the methods in collision avoidance systems.
-- More extensive data gathering, using the lidar mounted on the autonomous ferry prototype.
-- In-depth studies of multi-target and/or multi-scan EOT, and track initialization of EOT.
-- Applications of EOT in radar tracking or fusion between different sensors.
-- EOT is actually related to the much more well-studied problem of simultaneous localization and mapping (SLAM). The object in EOT can be viewed as a map which the observer moves relative to. An amibitous but very interesting project could be to bring tools from state of the art SLAM methods into the field of EOT (e.g., factor graphs).
+If time permits, there will be opportunities to conduct data recording experiments with Milliampere, and possibly even to test the methods in collision avoidance experiments.
 
 ## Prerequisites
+This is a list of *recommended* prerequisites for this master project.
 
-Required backgroud knowledge
-
-- Experience in either Matlab, Python or C++.
-- TTK4115 - Linear System Theory.
-
-Useful but not required background knowledge
-
-- Additional courses in statistics, estimation, sensor systems and/or machine learning.
-- Knowledge of ROS.
-- Knowledge of SLAM.
-- You should feel comfortable working with theory, and with uncertainty.
-
-This is a project of utmost importance for the safety of the autonomous ferry. The project is in the research front of sensor fusion, with many possibilities for publicity, both academically and in popular media.
+- Strong programming skills in either Matlab, Python or C++. You should have written several programs in the size of 1000's of code lines.
+- Significant exposure to statistics and algorithms, ideally through additional courses from <a href="https://www.ntnu.edu/imf">IMF</a>/<a href="https://www.ntnu.edu/idi">IDI</a> or foreign universities such as <a href="https://www.ethz.ch/en.html">ETH</a> or <a href="https://www.ucsb.edu">UCSB</a>.
+- Experience with sensor fusion or radar systems from internships or voluntary activities.
 
 ## Contact 
 For more information, contact main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo).
 
 ## References
 
+* Ruud, K., Brekke, E., & Eidsvik, J. (2018): “[LIDAR Extended Object Tracking of a Maritime Vessel Using an Ellipsoidal Contour Model](https://www.researchgate.net/publication/328890666_LIDAR_Extended_Object_Tracking_of_a_Maritime_Vessel_Using_an_Ellipsoidal_Contour_Model)”, SDF 2018.
 * Granström, K., Reuter, S., Meissner, D. & Scheel, A. (2014): “[A multiple model PHD approach to tracking of cars under an assumed rectangular shape](https://ieeexplore.ieee.org/document/6915991/)”, FUSION 2014.
 * Granström, K., Baum, M. & Reuter, S. (2016): “[Extended Object Tracking: Introduction, Overview and Applications](https://arxiv.org/abs/1604.00970)”, Journal of Advances in Information Fusion.
 * Schuster, M. & Reuter, J. (2015): “[Target tracking in marine environment using automotive radar and laser range sensor](https://ieeexplore.ieee.org/document/7284009/)”, MMAR 2015.
+
 
 See also some of the media coverage that the autonomous ferry project has received:
 
