eot updated nov 2018b

--- a/_posts/2018-04-11-eot.md
+++ b/_posts/2018-04-11-eot.md
@@ -7,7 +7,7 @@ category: SF
 
 ## Background
 
-During 2017 the prototype of the autonomous ferry Milliampere has been built and launched by researchers at NTNU. The 6 meter long prototype is a precursor of a twice as large ferry intended for passenger transport over the canal between Ravnkloa and Brattøra. The ferry will use a variety of sensors to perceive its surroundings and avoid collisions with other vessels. The primary sensor for this task will be a Velodyne lidar.
+During 2017 the prototype of the autonomous ferry <a href="https://www.ntnu.edu/autoferry">Milliampere</a> has been built and launched by researchers at NTNU. The 6 meter long prototype is a precursor of a twice as large ferry intended for passenger transport over the canal between Ravnkloa and Brattøra. The ferry will use a variety of sensors to perceive its surroundings and avoid collisions with other vessels. The primary sensor for this task will be a Velodyne lidar.
 
 Target tracking is a central component of the ferry's sensor system. Based on the raw sensor data, software must detect other objects, and estimate their locations and velocities. Many different tracking methods exist, and which method is most appropriate depends on the sensors used. The primary sensor for collision avoidance will be an automotive lidar, while cameras and radars also will be considered. Lidar and radar are both active sensors, which can measure both range and bearing. A key difference between radar and lidar is that the lidar has much higher resolution.
 
