changed labels in dead projects

--- a/_posts/2018-04-24-dp.md
+++ b/_posts/2018-04-24-dp.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  Dynamisk posisjonering av autonom ferge
-category: COLAV
+category: MISC
 ---
 ![Collison avoidance test - head on scenario]({{site.url}}/assets/fergelaunch_small.png ){:width="500px"}
 
