--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -30,30 +30,32 @@ During this assignment, the candidate will develop a multi-target tracking algor
 
 ## Proposed Tasks for the 5th year project
 
-In the specialization project the main focus will be on a track display for PMBM. The following tasks are proposed for the specialization project:
+In the specialization project the main focus will be on mastering the fundamental building blocks of PMBM and radar-AIS fusion. The following tasks are proposed for the specialization project: 
 
 * Make yourself familiar with multi-target tracking, random finite sets, MHT and PMBM. 
-* Write a survey on existing research on visualization of multi-target tracking.
-* Suggest a handful of output representations from the PMBM filter, and discuss their potential utility and reliability. Such representations can be the tracks of the top hypotheses, multi-target versions of maximum a posteriori estimates, occupancy grids, etc. 
-* Implement functions to obtain the chosen output representations, and experiment with graphical effects (e.g., coloring) to convey the information in the best possible way. 
-* Test the utility of the developed functions as part of PMBM tracking in simulations and on real data from the Autosea and Autoferry projects.
-* Write report and discuss the findings in the report. 
+* Design simple toy scenarios that will enable careful analysis of the expected benefits of radar-AIS fusion. 
+* Revise the hypothesis structure of the PMBM filter so that its hypotheses not only are able to account for associations between measurements in consecutive radar scans, but also associations between these and AIS tracks. 
+* Revise the expressions for the probabilities of the association hypotheses according to the revision of the hypothesis structure. 
+* Revise the estimation of target kinematics according to the two data sources.
+* Test the revisions in simulations. 
+* Write report.
 
 ## Proposed Tasks for the master thesis
 
-In the MSc thesis the candidate will aim to further expand the work from the specialization project into a system for situational awareness. The context of situational awareness applies both to a human operator overseeing the autonomous system, and collision avoidance methods that use the PMBM results as input. Several variations are possible, depending on the interests of the candidate. 
+In the MSc thesis the work should move from toy scenarios to more comprehensive simulations and real data. It is also desirable to strengthen the theoretical foundations of the work using the tools of random finite set theory such as functional derivatives. The following topics are expected to be of central importance. 
 
-* Experiment with closed-loop usage of the tracking system as part of a COLAV system in simulations. This approach will involve collaboration with one or more of the PhD students who currently work on maritime COLAV at ITK.
-* Investigate more carefully how accurate different output representations really are. Which measures can we use to quantify this?
-* Expand the work from the specialization project to handle heterogeneous multi-sensor tracking, e.g., fusion of cameras and radar. 
-* Test the visualization systems on trained operators and compare with professional ARPA displays. 
+* Study mixture reduction techniques to limit the number of hypotheses. 
+* Benchmark against other approaches to AIS-radar fusion, such as Liland (2017) or Habtemariam (2014).
+* Generate more elaborate simulations and/or participate in field experiments to record real data. 
 
 This project can be expanded into a PhD or integrated PhD for a candidate with sufficient skills, background knowledge and motivation. 
 
 ## References
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
 
-Crouse, D., Willett, P. and Bar-Shalom, Y. (2011). "[Developing a Real-Time Track Display That Operators Do Not Hate.][Crouse2011]" IEEE Transactions on Signal Processing, vol. 59, no. 7.
+Habtemariam et al. (2014): “[Measurement levelAIS/radar fusion][Habtemariam2014]”, Signal Processing.
+
+Liland (2007): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’s thesis, NTNU.
 
 ## Contact
 
@@ -61,4 +63,5 @@ Supervisor: [Edmund Brekke].
 
 [Edmund Brekke]: www.ntnu.edu/employees/edmund.brekke
 [Williams2015]: https://ieeexplore.ieee.org/document/7272821
-[Crouse2011]: https://ieeexplore.ieee.org/document/5740994
+[Habtemariam2014]: https://www.sciencedirect.com/science/article/pii/S0165168414003636
+[Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
