--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -15,7 +15,7 @@ For radar, on the other hand, one must always solve the problem of data associat
 Of several returns in a radar image one must decide which return comes from which ship. 
 However, radar or other exteroceptive sensors are always needed because not all ships have AIS, and because AIS depends on satellite communication with its own reliability issues. 
 
-In the Autosea project, both radar and AIS have been used as information sources in collision avoidance (COLAV) experiments. 
+In the [Autosea project][Autosea], both radar and AIS have been used as information sources in collision avoidance (COLAV) experiments. 
 However, the two data sources were never used together, because a sufficiently mature algorithm for fusing radar and AIS never was developed. 
 
 It is not immediately obvious how radar and AIS should be fused in order to benefit maximally from the two data sources complementary properties. 
@@ -65,3 +65,4 @@ Supervisor: [Edmund Brekke].
 [Williams2015]: https://ieeexplore.ieee.org/document/7272821
 [Habtemariam2014]: https://www.sciencedirect.com/science/article/pii/S0165168414003636
 [Liland2017]: https://brage.bibsys.no/xmlui/bitstream/handle/11250/2452107/16477_FULLTEXT.pdf?sequence=1
+[Autosea]: https://www.ntnu.edu/autosea
