--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -27,7 +27,6 @@ Such an approach is provided by the Poisson Multi-Bernoulli Mixture (PMBM) filte
 
 During this assignment, the candidate will develop a multi-target tracking algorithm that fuses both radar data and AIS data within the PMBM framework. 
 
-
 ## Proposed Tasks for the 5th year project
 
 In the specialization project the main focus will be on mastering the fundamental building blocks of PMBM and radar-AIS fusion. The following tasks are proposed for the specialization project: 
@@ -49,6 +48,14 @@ In the MSc thesis the work should move from toy scenarios to more comprehensive 
 * Generate more elaborate simulations and/or participate in field experiments to record real data. 
 
 This project can be expanded into a PhD or integrated PhD for a candidate with sufficient skills, background knowledge and motivation. 
+
+## Prerequisites
+This is a challenging project that goes to the core of modern theory in sensor fusion. The following recommendations should therefore be considered. 
+
+- Experience with sensor fusion or radar systems from internships or voluntary activities will be useful.
+- It will be very useful to have had significant exposure to statistics and estimation from courses beyond ITK, e.g., from IES or IMF at NTNU, or from exchange studies. 
+- It will be useful to take the course TTK4250 Sensor Fusion in parallell with the specialization project, instead of the conventional 2.75 SP modules. 
+- The candidate must like mathematics and to analyze problems on a very detailed level.
 
 ## References
 Williams, J. (2015). "[Marginal multi-Bernoulli filters: RFS derivation of MHT, JIPDA, and association-based member.][Williams2015]" IEEE Transactions on Aerospace and Electronic Systems, vol. 51, no. 3.
