more on revolt project

--- a/_posts/2019-04-26-revolt-sf.md
+++ b/_posts/2019-04-26-revolt-sf.md
@@ -4,12 +4,13 @@ title: Sensor fusion for ReVolt
 category: SF
 ---
 ## Background
-Bla bla
+The ReVolt is an unmanned and zero-emission ship concept designed for short sea shipping along the coast of Norway. The ReVolt was designed for low energy demand and the propulsion system is fully electric. The ReVolt has 2 stern pods and 1 retractable azimuth thruster in the bow.
+A 1:20 scale model of the ReVolt has been built to explore and demonstrate the vessels autonomous capabilities and to test other design features.
 
 |<img src="{{site.url}}/assets/revolt3.png" width="570"> | 
 | The ReVolt model-scale vessel. | 
 
-bla bla 
+During the spring 2019 ReVolt has been equipped with a 360 degree camera system and a lidar, enabling it to perceive its surroundings. 
 
 |<img src="{{site.url}}/assets/ladybugpuck.png" width="570"> | 
 | The Ladybug 360 degree camera and the Velodyne Puck lidar mounted on ReVolt  |
