more on revolt sf

--- a/_posts/2019-04-26-revolt-sf.md
+++ b/_posts/2019-04-26-revolt-sf.md
@@ -11,6 +11,8 @@ A 1:20 scale model of the ReVolt has been built to explore and demonstrate the v
 | The ReVolt model-scale vessel. | 
 
 During the spring 2019 ReVolt has been equipped with a 360 degree camera system and a lidar, enabling it to perceive its surroundings. 
+An MSc student is currently working on the development of a real time detection and tracking system on ReVolt. 
+This system will use convolutional neural networks for camera detection, clustering algorithms for lidar segmentation, and a multi-sensor version of the target tracking system described in (Wilthil 2017). 
 
 |<img src="{{site.url}}/assets/ladybugpuck.png" width="570"> | 
 | The Ladybug 360 degree camera and the Velodyne Puck lidar mounted on ReVolt  |
@@ -40,3 +42,4 @@ Main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo)
 
 ## References
 
+* Wilthil, Flåten & Brekke (2017): "A target tracking system for ASV collision avoidance based on the PDAF", in Sensing and Control for Autonomous Vehicles, Springer. 
