--- a/_posts/2019-04-26-revolt-sf.md
+++ b/_posts/2019-04-26-revolt-sf.md
@@ -18,28 +18,28 @@ This system will use convolutional neural networks for camera detection, cluster
 | The Ladybug 360 degree camera and the Velodyne Puck lidar mounted on ReVolt  |
 
 ## Scope
-Bla bla
+The goal of this combined 5th year and master project will be to demonstrate sensor fusion as part of a closed loop collision avoidance system for ReVolt. 
+The project can possibly be expanded into different projects for two or more collaborating students. 
 
 ## Proposed Tasks for the 5th year project
 
-1. Bla bla
-2. Bla bla
-3. Bla bla
-4. Bla bla 
-5. Bla bla
+1. Conduct experiments early in the autumn semester to gather data from relevant scenarios which will guide the development of the sensor fusion and collision avoidance system. 
+2. Investigate the experimental data with a particular focus on challenges such as multi-target situations, occlusions, false tracks and misdetections, adverse weather conditions, problems with computational complexity, navigation uncertainty etc. 
+3. Based on identified challenges, propose solutions and mitigations. The candidate should check whether these can be based on previous and current developments in the Autosea, Autoferry and Autosit projects, or open source implementations on the web, to avoid reinventing the wheel unncessarily. 
+4. Implement solutions to the most critical challenges, and verify on recorded data. Algorithmic developments should also as much as possible be tested in simulations.  
+5. Write report and make a plan for the MSc project. 
 
 ## Proposed Tasks for the master thesis
 
-The project work aims to be extended into a master thesis for the spring of 2020. The following tasks are proposed for the MSc project:
-
-1. Bla bla
-2. Bla bla
-3. Bla bla
-4. Bla bla
+For the MSc project the goal will be to develop a closed-loop collision avoidance system, that ideally should be tested in real-world experiments during April or early May 2020. 
+An MPC-based collision avoidance system for ReVolt exists already (Midjås 2018), but it has never been tested with sensor fusion as an input. Inclusion of hazard regions due to land is currently under development. Some revisions of the MPC method itself are likely to be needed to make the closed-loop system work, and a good interface between the sensor fusion and the control system is also needed as part of the MSc project. 
 
 ## Contact
 Main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo)
 
 ## References
 
-* Wilthil, Flåten & Brekke (2017): "A target tracking system for ASV collision avoidance based on the PDAF", in Sensing and Control for Autonomous Vehicles, Springer. 
+* Wilthil, Flåten & Brekke (2017): "[A target tracking system for ASV collision avoidance based on the PDAF]", in Sensing and Control for Autonomous Vehicles, Springer. 
+* Midjås, T. (2018): "Collision Avoidance for the ReVolt Model-Scale Ship", Specialization project, NTNU. 
+
+[A target tracking system for ASV collision avoidance based on the PDAF]: https://link.springer.com/book/10.1007/978-3-319-55372-6
