more on revolt sf

--- a/_posts/2019-04-26-revolt-sf.md
+++ b/_posts/2019-04-26-revolt-sf.md
@@ -40,6 +40,9 @@ Main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo)
 ## References
 
 * Wilthil, Flåten & Brekke (2017): "[A target tracking system for ASV collision avoidance based on the PDAF]", in Sensing and Control for Autonomous Vehicles, Springer. 
-* Midjås, T. (2018): "Collision Avoidance for the ReVolt Model-Scale Ship", Specialization project, NTNU. 
+* Midjås, T. (2018): "[Collision Avoidance for the ReVolt Model-Scale Ship]", Specialization project, NTNU. 
+* Norbye, H. G. (2019): "[Camera-Lidar sensor fusion in real time for autonomous surface vehicles]", Specialization project, NTNU. 
 
 [A target tracking system for ASV collision avoidance based on the PDAF]: https://link.springer.com/book/10.1007/978-3-319-55372-6
+[Camera-Lidar sensor fusion in real time for autonomous surface vehicles]: http://folk.ntnu.no/edmundfo/msc2019-2020/norbye-lidar-camera-reduced.pdf
+[Collision Avoidance for the ReVolt Model-Scale Ship]: http://folk.ntnu.no/edmundfo/msc2019-2020/midjaas-colav-revolt.pdf
