more on revolt sf

--- a/_posts/2019-04-26-revolt-sf.md
+++ b/_posts/2019-04-26-revolt-sf.md
@@ -35,7 +35,8 @@ For the MSc project the goal will be to develop a closed-loop collision avoidanc
 An MPC-based collision avoidance system for ReVolt exists already (Midjås 2018), but it has never been tested with sensor fusion as an input. Inclusion of hazard regions due to land is currently under development. Some revisions of the MPC method itself are likely to be needed to make the closed-loop system work, and a good interface between the sensor fusion and the control system is also needed as part of the MSc project. 
 
 ## Contact
-Main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo)
+Main supervisor [Edmund F. Brekke](http://www.ntnu.no/ansatte/edmundfo)<br>
+Co-advisors: Geir Hamre, Tom Arne Pedersen, Vegard Kamsvåg (DNV GL), Inger Berge Hagen (NTNU)
 
 ## References
 
