--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -64,6 +64,10 @@ Habtemariam et al. (2014): “[Measurement levelAIS/radar fusion][Habtemariam201
 
 Liland (2007): “[AIS Aided Multi Hypothesis Tracker][Liland2017]”, Master’s thesis, NTNU.
 
+## Prerequisites
+
+Mathematical maturity and strong programming skills are essential to succeed with this project. The candidate should consider taking the new 7.5 credit course TTK4250 Sensor Fusion instead of the conventional two 2.75 credit specialization themes. 
+
 ## Contact
 
 Supervisor: [Edmund Brekke].  
