picture in pmbm ais

--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -10,6 +10,8 @@ On the fundamental level, there are two ways to achieve this. On the one hand, s
 All ships of a certain size are obliged to do this through the Automatic Identification System (AIS). 
 On the other hand, ships can perceive their environment including other ships by means of exteroceptive sensors such as radar, lidar, optical cameras and infrared cameras. 
 
+|<img src="{{site.url}}/assets/ais_slide.png" width="570"> | 
+
 AIS is easy to work with because AIS data are inherently tidy: There is a unique measurement from each boat that has an AIS transmitter. 
 For radar, on the other hand, one must always solve the problem of data association: 
 Of several returns in a radar image one must decide which return comes from which ship. 
