--- a/_posts/2019-04-24-pmbm_ais.md
+++ b/_posts/2019-04-24-pmbm_ais.md
@@ -52,10 +52,10 @@ In the MSc thesis the work should move from toy scenarios to more comprehensive 
 This project can be expanded into a PhD or integrated PhD for a candidate with sufficient skills, background knowledge and motivation. 
 
 |<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
-| Giorgio Kufoalor during Autosea experiments in the Netherlands where AIS data were used |
+| Giorgio Kufoalor during [Autosea] experiments in the Netherlands where AIS data were used |
 
 |<img src="{{site.url}}/assets/wilthilsyn.jpg" width="700"> | 
-| Erik Wilthil during Autosea experiments in Trondheimsfjorden where radar tracking was used |
+| Erik Wilthil during [Autosea] experiments in Trondheimsfjorden where radar tracking was used |
 
 ## Prerequisites
 This is a challenging project that goes to the core of modern theory in sensor fusion. The following recommendations should therefore be considered. 
